Updated Integration tests to new speed
Enabled the GUI on integration tests.
Made the integration tests properly all run, instead of only BlockTest,
now that the server can disconnect bots.


Former-commit-id: f59811729d4de6658eed86a8bfbf162c3bd6f5a3 [formerly a60bf21fca432ffeec548dc16188d06bf97456c9]
Former-commit-id: 721f7768080a23da98f4539ab2fec0c3d1fb2479

--- a/bw4t/bw4t-integration-test/pom.xml
+++ b/bw4t/bw4t-integration-test/pom.xml
@@ -53,7 +53,7 @@
                                 <mkdir dir="target/run-server/" />
                                 <java fork="true" spawn="true" dir="target/run-server/"
                                     classpathref="maven.runtime.classpath" className="nl.tudelft.bw4t.server.environment.Launcher"
-                                    args="-gui false -map Banana -key bw4tServerIntegration" />
+                                    args="-gui true -map Banana -key bw4tServerIntegration" />
                                 <waitfor maxwait="1" maxwaitunit="minute" checkevery="200">
                                     <socket server="localhost" port="8000" />
                                 </waitfor>
