--- a/bw4t/bw4t-server/pom.xml
+++ b/bw4t/bw4t-server/pom.xml
@@ -2,11 +2,11 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>nl.tudelft</groupId>
+        <groupId>eishub</groupId>
         <artifactId>bw4t</artifactId>
         <version>3.5.0</version>
     </parent>
-    <groupId>nl.tudelft.bw4t</groupId>
+    <groupId>eishub.bw4t</groupId>
     <artifactId>bw4t-server</artifactId>
     <properties>
         <checkstyle.config.location>../checkstyle.xml</checkstyle.config.location>
@@ -71,7 +71,7 @@
     </build>
     <dependencies>
         <dependency>
-            <groupId>nl.tudelft.bw4t.core</groupId>
+            <groupId>eishub.bw4t.core</groupId>
             <artifactId>bw4t-core</artifactId>
             <version>3.5.0</version>
         </dependency>
