--- a/bw4t/bw4t-core/pom.xml
+++ b/bw4t/bw4t-core/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>eishub</groupId>
         <artifactId>bw4t</artifactId>
-        <version>3.5.0</version>
+        <version>3.6.2-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
     <groupId>eishub.bw4t.core</groupId>
