Internal dependancies are now refered to with ranges
This should make it easier to build and the buildsystem will always use the newest version of the build. The range is defined as follows: [3.5.0,4.0.0)  meaning any version between 3.5.0 and 4.0.0 exclusive 4.0.0

--- a/bw4t/bw4t-client/pom.xml
+++ b/bw4t/bw4t-client/pom.xml
@@ -17,7 +17,7 @@
         <dependency>
             <groupId>eishub.bw4t.core</groupId>
             <artifactId>bw4t-core</artifactId>
-            <version>3.5.0</version>
+            <version>[3.5.0,4.0.0)</version>
         </dependency>
     </dependencies>
     <build>
