--- a/bw4t/bw4t-environment-store/pom.xml
+++ b/bw4t/bw4t-environment-store/pom.xml
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>eishub.bw4t.core</groupId>
             <artifactId>bw4t-core</artifactId>
-            <version>3.5.0</version>
+            <version>[3.5.0,4.0.0)</version>
         </dependency>
         <dependency>
             <groupId>com.miglayout</groupId>
