--- a/bw4t/bw4t-integration-test/pom.xml
+++ b/bw4t/bw4t-integration-test/pom.xml
@@ -18,12 +18,12 @@
         <dependency>
             <groupId>eishub.bw4t</groupId>
             <artifactId>bw4t-server</artifactId>
-            <version>3.5.0</version>
+            <version>[3.5.0,4.0.0)</version>
         </dependency>
         <dependency>
             <groupId>eishub.bw4t</groupId>
             <artifactId>bw4t-client</artifactId>
-            <version>3.5.0</version>
+            <version>[3.5.0,4.0.0)</version>
         </dependency>
     </dependencies>
 
