--- a/bw4t/bw4t-integration-test/pom.xml
+++ b/bw4t/bw4t-integration-test/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>eishub</groupId>
         <artifactId>bw4t</artifactId>
-        <version>3.6.4-SNAPSHOT</version>
+        <version>3.6.5</version>
         <relativePath>..</relativePath>
     </parent>
     <groupId>eishub.bw4t</groupId>
@@ -18,12 +18,12 @@
         <dependency>
             <groupId>eishub.bw4t</groupId>
             <artifactId>bw4t-server</artifactId>
-            <version>[3.5.0,4.0.0)</version>
+            <version>3.6.5</version>
         </dependency>
         <dependency>
             <groupId>eishub.bw4t</groupId>
             <artifactId>bw4t-client</artifactId>
-            <version>[3.5.0,4.0.0)</version>
+            <version>3.6.5</version>
         </dependency>
     </dependencies>
 
