--- a/bw4t/bw4t-scenario-editor/pom.xml
+++ b/bw4t/bw4t-scenario-editor/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>eishub</groupId>
         <artifactId>bw4t</artifactId>
-        <version>3.6.5</version>
+        <version>3.6.6-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
     <groupId>eishub.bw4t</groupId>
@@ -110,7 +110,7 @@
         <dependency>
             <groupId>eishub.bw4t.core</groupId>
             <artifactId>bw4t-core</artifactId>
-            <version>3.6.5</version>
+            <version>3.6.6-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
