--- a/bw4t/pom.xml
+++ b/bw4t/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>eishub</groupId>
     <artifactId>bw4t</artifactId>
-    <version>3.6.5</version>
+    <version>3.6.6-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
         <module>bw4t-server</module>
