#3292 hacky fix to avoid concurrent modification exceptions when blocks are picked up from humangui.

--- a/bw4t/bw4t-scenario-editor/.project
+++ b/bw4t/bw4t-scenario-editor/.project
@@ -2,7 +2,9 @@
 <projectDescription>
   <name>bw4t-scenario-editor</name>
   <comment>NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
-  <projects/>
+  <projects>
+    <project>bw4t-core</project>
+  </projects>
   <buildSpec>
     <buildCommand>
       <name>org.eclipse.jdt.core.javabuilder</name>
