--- a/bw4t/bw4t-environment-store/.project
+++ b/bw4t/bw4t-environment-store/.project
@@ -1,25 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-    <name>bw4t-map-editor</name>
-    <comment></comment>
-    <projects>
-        <project>bw4t-core</project>
-    </projects>
-    <buildSpec>
-        <buildCommand>
-            <name>org.eclipse.jdt.core.javabuilder</name>
-            <arguments>
-            </arguments>
-        </buildCommand>
-        <buildCommand>
-            <name>org.eclipse.m2e.core.maven2Builder</name>
-            <arguments>
-            </arguments>
-        </buildCommand>
-    </buildSpec>
-    <natures>
-        <nature>org.sonar.ide.eclipse.core.sonarNature</nature>
-        <nature>org.eclipse.jdt.core.javanature</nature>
-        <nature>org.eclipse.m2e.core.maven2Nature</nature>
-    </natures>
+  <name>bw4t-environment-store</name>
+  <comment>NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
+  <projects>
+    <project>bw4t-core</project>
+  </projects>
+  <buildSpec>
+    <buildCommand>
+      <name>org.eclipse.jdt.core.javabuilder</name>
+    </buildCommand>
+    <buildCommand>
+      <name>org.eclipse.m2e.core.maven2Builder</name>
+    </buildCommand>
+  </buildSpec>
+  <natures>
+    <nature>org.sonar.ide.eclipse.core.sonarNature</nature>
+    <nature>org.eclipse.jdt.core.javanature</nature>
+    <nature>org.eclipse.m2e.core.maven2Nature</nature>
+  </natures>
 </projectDescription>
