--- a/bw4t/bw4t-core/.classpath
+++ b/bw4t/bw4t-core/.classpath
@@ -1,102 +1,83 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
-		<attributes>
-			<attribute name="optional" value="true"/>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry excluding="**/*.java" including="**/*.java" kind="src" output="target/test-classes" path="src/test/resources"/>
-	<classpathentry kind="src" output="target/classes" path="src/main/java">
-		<attributes>
-			<attribute name="optional" value="true"/>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="var" path="M2_REPO/eishub/eis/0.4/eis-0.4.jar" sourcepath="M2_REPO/eishub/eis/0.4/eis-0.4-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:file:/Users/wouter/.m2/repository/eishub/eis/0.4/eis-0.4-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.16/log4j-1.2.16.jar" sourcepath="M2_REPO/log4j/log4j/1.2.16/log4j-1.2.16-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:file:/Users/wouter/.m2/repository/log4j/log4j/1.2.16/log4j-1.2.16-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="var" path="M2_REPO/junit/junit/4.11/junit-4.11.jar" sourcepath="M2_REPO/junit/junit/4.11/junit-4.11-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:file:/Users/wouter/.m2/repository/junit/junit/4.11/junit-4.11-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="var" path="M2_REPO/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar" sourcepath="M2_REPO/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:file:/Users/wouter/.m2/repository/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="var" path="M2_REPO/org/easymock/easymock/3.2/easymock-3.2.jar" sourcepath="M2_REPO/org/easymock/easymock/3.2/easymock-3.2-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:file:/Users/wouter/.m2/repository/org/easymock/easymock/3.2/easymock-3.2-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="var" path="M2_REPO/cglib/cglib-nodep/2.2.2/cglib-nodep-2.2.2.jar" sourcepath="M2_REPO/cglib/cglib-nodep/2.2.2/cglib-nodep-2.2.2-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:file:/Users/wouter/.m2/repository/cglib/cglib-nodep/2.2.2/cglib-nodep-2.2.2-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="var" path="M2_REPO/org/objenesis/objenesis/1.3/objenesis-1.3.jar" sourcepath="M2_REPO/org/objenesis/objenesis/1.3/objenesis-1.3-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:file:/Users/wouter/.m2/repository/org/objenesis/objenesis/1.3/objenesis-1.3-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="var" path="M2_REPO/org/mockito/mockito-all/1.9.5/mockito-all-1.9.5.jar" sourcepath="M2_REPO/org/mockito/mockito-all/1.9.5/mockito-all-1.9.5-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:file:/Users/wouter/.m2/repository/org/mockito/mockito-all/1.9.5/mockito-all-1.9.5-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="var" path="M2_REPO/org/powermock/powermock-module-junit4/1.5.5/powermock-module-junit4-1.5.5.jar" sourcepath="M2_REPO/org/powermock/powermock-module-junit4/1.5.5/powermock-module-junit4-1.5.5-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:file:/Users/wouter/.m2/repository/org/powermock/powermock-module-junit4/1.5.5/powermock-module-junit4-1.5.5-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="var" path="M2_REPO/org/powermock/powermock-module-junit4-common/1.5.5/powermock-module-junit4-common-1.5.5.jar" sourcepath="M2_REPO/org/powermock/powermock-module-junit4-common/1.5.5/powermock-module-junit4-common-1.5.5-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:file:/Users/wouter/.m2/repository/org/powermock/powermock-module-junit4-common/1.5.5/powermock-module-junit4-common-1.5.5-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="var" path="M2_REPO/org/powermock/powermock-core/1.5.5/powermock-core-1.5.5.jar" sourcepath="M2_REPO/org/powermock/powermock-core/1.5.5/powermock-core-1.5.5-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:file:/Users/wouter/.m2/repository/org/powermock/powermock-core/1.5.5/powermock-core-1.5.5-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="var" path="M2_REPO/org/powermock/powermock-reflect/1.5.5/powermock-reflect-1.5.5.jar" sourcepath="M2_REPO/org/powermock/powermock-reflect/1.5.5/powermock-reflect-1.5.5-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:file:/Users/wouter/.m2/repository/org/powermock/powermock-reflect/1.5.5/powermock-reflect-1.5.5-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="var" path="M2_REPO/org/javassist/javassist/3.18.2-GA/javassist-3.18.2-GA.jar" sourcepath="M2_REPO/org/javassist/javassist/3.18.2-GA/javassist-3.18.2-GA-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:file:/Users/wouter/.m2/repository/org/javassist/javassist/3.18.2-GA/javassist-3.18.2-GA-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="var" path="M2_REPO/org/powermock/powermock-api-mockito/1.5.5/powermock-api-mockito-1.5.5.jar" sourcepath="M2_REPO/org/powermock/powermock-api-mockito/1.5.5/powermock-api-mockito-1.5.5-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:file:/Users/wouter/.m2/repository/org/powermock/powermock-api-mockito/1.5.5/powermock-api-mockito-1.5.5-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="var" path="M2_REPO/org/powermock/powermock-api-support/1.5.5/powermock-api-support-1.5.5.jar" sourcepath="M2_REPO/org/powermock/powermock-api-support/1.5.5/powermock-api-support-1.5.5-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:file:/Users/wouter/.m2/repository/org/powermock/powermock-api-support/1.5.5/powermock-api-support-1.5.5-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="output" path="target/classes"/>
+  <classpathentry kind="src" path="src/test/java" output="target/test-classes" including="**/*.java"/>
+  <classpathentry kind="src" path="src/test/resources" output="target/test-classes" excluding="**/*.java"/>
+  <classpathentry kind="src" path="src/main/java" including="**/*.java"/>
+  <classpathentry kind="output" path="target/classes"/>
+  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+  <classpathentry kind="var" path="M2_REPO/eishub/eis/0.4.1/eis-0.4.1.jar" sourcepath="M2_REPO/eishub/eis/0.4.1/eis-0.4.1-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/eishub/eis/0.4.1/eis-0.4.1-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.16/log4j-1.2.16.jar" sourcepath="M2_REPO/log4j/log4j/1.2.16/log4j-1.2.16-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/log4j/log4j/1.2.16/log4j-1.2.16-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/junit/junit/4.11/junit-4.11.jar" sourcepath="M2_REPO/junit/junit/4.11/junit-4.11-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/junit/junit/4.11/junit-4.11-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar" sourcepath="M2_REPO/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/easymock/easymock/3.2/easymock-3.2.jar" sourcepath="M2_REPO/org/easymock/easymock/3.2/easymock-3.2-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/org/easymock/easymock/3.2/easymock-3.2-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/cglib/cglib-nodep/2.2.2/cglib-nodep-2.2.2.jar" sourcepath="M2_REPO/cglib/cglib-nodep/2.2.2/cglib-nodep-2.2.2-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/cglib/cglib-nodep/2.2.2/cglib-nodep-2.2.2-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/objenesis/objenesis/1.3/objenesis-1.3.jar" sourcepath="M2_REPO/org/objenesis/objenesis/1.3/objenesis-1.3-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/org/objenesis/objenesis/1.3/objenesis-1.3-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/mockito/mockito-all/1.9.5/mockito-all-1.9.5.jar" sourcepath="M2_REPO/org/mockito/mockito-all/1.9.5/mockito-all-1.9.5-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/org/mockito/mockito-all/1.9.5/mockito-all-1.9.5-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/powermock/powermock-module-junit4/1.5.5/powermock-module-junit4-1.5.5.jar" sourcepath="M2_REPO/org/powermock/powermock-module-junit4/1.5.5/powermock-module-junit4-1.5.5-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/org/powermock/powermock-module-junit4/1.5.5/powermock-module-junit4-1.5.5-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/powermock/powermock-module-junit4-common/1.5.5/powermock-module-junit4-common-1.5.5.jar" sourcepath="M2_REPO/org/powermock/powermock-module-junit4-common/1.5.5/powermock-module-junit4-common-1.5.5-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/org/powermock/powermock-module-junit4-common/1.5.5/powermock-module-junit4-common-1.5.5-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/powermock/powermock-core/1.5.5/powermock-core-1.5.5.jar" sourcepath="M2_REPO/org/powermock/powermock-core/1.5.5/powermock-core-1.5.5-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/org/powermock/powermock-core/1.5.5/powermock-core-1.5.5-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/powermock/powermock-reflect/1.5.5/powermock-reflect-1.5.5.jar" sourcepath="M2_REPO/org/powermock/powermock-reflect/1.5.5/powermock-reflect-1.5.5-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/org/powermock/powermock-reflect/1.5.5/powermock-reflect-1.5.5-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/javassist/javassist/3.18.2-GA/javassist-3.18.2-GA.jar" sourcepath="M2_REPO/org/javassist/javassist/3.18.2-GA/javassist-3.18.2-GA-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/org/javassist/javassist/3.18.2-GA/javassist-3.18.2-GA-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/powermock/powermock-api-mockito/1.5.5/powermock-api-mockito-1.5.5.jar" sourcepath="M2_REPO/org/powermock/powermock-api-mockito/1.5.5/powermock-api-mockito-1.5.5-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/org/powermock/powermock-api-mockito/1.5.5/powermock-api-mockito-1.5.5-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/powermock/powermock-api-support/1.5.5/powermock-api-support-1.5.5.jar" sourcepath="M2_REPO/org/powermock/powermock-api-support/1.5.5/powermock-api-support-1.5.5-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/wouter/.m2/repository/org/powermock/powermock-api-support/1.5.5/powermock-api-support-1.5.5-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
 </classpath>
