--- a/bw4t/bw4t-client/pom.xml
+++ b/bw4t/bw4t-client/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>eishub</groupId>
 		<artifactId>bw4t</artifactId>
-		<version>3.7.1-SNAPSHOT</version>
+		<version>3.8.0</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<groupId>eishub.bw4t</groupId>
@@ -17,7 +17,7 @@
 		<dependency>
 			<groupId>eishub.bw4t.core</groupId>
 			<artifactId>bw4t-core</artifactId>
-			<version>3.7.1-SNAPSHOT</version>
+			<version>3.8.0</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -51,7 +51,7 @@
 				<executions>
 					<execution>
 						<id>attach-sources</id>
-						<phase>verify</phase>
+						<phase>package</phase>
 						<goals>
 							<goal>jar-no-fork</goal>
 						</goals>
