--- a/bw4t/bw4t-core/pom.xml
+++ b/bw4t/bw4t-core/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>eishub</groupId>
 		<artifactId>bw4t</artifactId>
-		<version>3.7.1-SNAPSHOT</version>
+		<version>3.8.0</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<groupId>eishub.bw4t.core</groupId>
@@ -51,7 +51,7 @@
 		<dependency>
 			<groupId>eishub</groupId>
 			<artifactId>eis</artifactId>
-			<version>0.5.0-SNAPSHOT</version>
+			<version>0.5.0</version>
 		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
