--- a/bw4t/bw4t-scenario-editor/pom.xml
+++ b/bw4t/bw4t-scenario-editor/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>eishub</groupId>
 		<artifactId>bw4t</artifactId>
-		<version>3.7.1-SNAPSHOT</version>
+		<version>3.8.0</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<groupId>eishub.bw4t</groupId>
@@ -126,7 +126,7 @@
 		<dependency>
 			<groupId>eishub.bw4t.core</groupId>
 			<artifactId>bw4t-core</artifactId>
-			<version>3.7.1-SNAPSHOT</version>
+			<version>3.8.0</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
