--- a/bw4t/bw4t-server/pom.xml
+++ b/bw4t/bw4t-server/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>eishub</groupId>
 		<artifactId>bw4t</artifactId>
-		<version>3.7.1-SNAPSHOT</version>
+		<version>3.8.0</version>
 	</parent>
 	<groupId>eishub.bw4t</groupId>
 	<artifactId>bw4t-server</artifactId>
@@ -88,7 +88,7 @@
 		<dependency>
 			<groupId>eishub.bw4t.core</groupId>
 			<artifactId>bw4t-core</artifactId>
-			<version>3.7.1-SNAPSHOT</version>
+			<version>3.8.0</version>
 		</dependency>
 		<dependency>
 			<groupId>repast.simphony</groupId>
