--- a/bw4t/bw4t-core/pom.xml
+++ b/bw4t/bw4t-core/pom.xml
@@ -7,12 +7,38 @@
 		<version>3.8.0</version>
 		<relativePath>..</relativePath>
 	</parent>
+	
 	<groupId>eishub.bw4t.core</groupId>
 	<artifactId>bw4t-core</artifactId>
 	<name>bw4t-core</name>
+	<url>http://www.github.com/eishub/bw4t</url>
+	
 	<properties>
 		<checkstyle.config.location>../checkstyle.xml</checkstyle.config.location>
 	</properties>
+	
+	<organization>
+		<name>eishub</name>
+		<url>https://github.com/eishub</url>
+	</organization>
+
+	<issueManagement>
+		<url>https://github.com/eishub/bw4t/issues</url>
+		<system>Github BW4T Issues</system>
+	</issueManagement>
+
+	<scm>
+		<connection>scm:git:git@github.com:eishub/bw4t.git</connection>
+		<developerConnection>scm:git:git@github.com:eishub/bw4t.git</developerConnection>
+		<url>https://github.com:eishub/bw4t</url>
+	</scm>
+	
+	<repositories>
+		<repository>
+			<id>eishub-mvn-repo</id>
+			<url>https://raw.github.com/eishub/mvn-repo/master</url>
+		</repository>
+	</repositories>
 
 	<build>
 		<plugins>
@@ -29,6 +55,7 @@
 					</archive>
 				</configuration>
 			</plugin>
+			
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
@@ -43,7 +70,47 @@
 					</execution>
 				</executions>
 			</plugin>
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.8.2</version>
+				<configuration>
+					<altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
+				</configuration>
+			</plugin>
 
+			<plugin>
+				<groupId>com.github.github</groupId>
+				<artifactId>site-maven-plugin</artifactId>
+				<version>0.10</version>
+				<configuration>
+					<server>github</server>
+					<!-- git commit message -->
+					<message>Maven artifacts for ${project.name} version ${project.version}</message>
+					<!-- matches distribution management repository url above -->
+					<outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
+					<!-- remote branch name -->
+					<branch>refs/heads/master</branch>
+					<merge>true</merge>
+					<includes>
+						<include>**/*</include>
+					</includes>
+					<!-- github repo name -->
+					<repositoryName>mvn-repo</repositoryName>
+					<!-- github organization -->
+					<repositoryOwner>eishub</repositoryOwner>
+				</configuration>
+				<executions>
+					<!-- run site-maven-plugin as part of the build's 'deploy' phase -->
+					<execution>
+						<goals>
+							<goal>site</goal>
+						</goals>
+						<phase>deploy</phase>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
