--- a/bw4t/bw4t-server/pom.xml
+++ b/bw4t/bw4t-server/pom.xml
@@ -1,18 +1,38 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	
 	<parent>
 		<groupId>eishub</groupId>
 		<artifactId>bw4t</artifactId>
 		<version>3.8.0</version>
 	</parent>
+	
 	<groupId>eishub.bw4t</groupId>
 	<artifactId>bw4t-server</artifactId>
+	<url>http://www.github.com/eishub/bw4t</url>
+	
 	<properties>
 		<checkstyle.config.location>../checkstyle.xml</checkstyle.config.location>
 		<java.main.class>nl.tudelft.bw4t.server.environment.Launcher</java.main.class>
 	</properties>
 	<packaging>jar</packaging>
+	
+	<organization>
+		<name>eishub</name>
+		<url>https://github.com/eishub</url>
+	</organization>
+
+	<issueManagement>
+		<url>https://github.com/eishub/bw4t/issues</url>
+		<system>Github BW4T Issues</system>
+	</issueManagement>
+
+	<scm>
+		<connection>scm:git:git@github.com:eishub/bw4t.git</connection>
+		<developerConnection>scm:git:git@github.com:eishub/bw4t.git</developerConnection>
+		<url>https://github.com:eishub/bw4t</url>
+	</scm>
 
 	<build>
 		<plugins>
@@ -78,14 +98,22 @@
 			</plugin>
 			
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.8.2</version>
+				<configuration>
+					<altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
+				</configuration>
+			</plugin>
+			
+			<plugin>
 				<groupId>com.github.github</groupId>
 				<artifactId>site-maven-plugin</artifactId>
 				<version>0.10</version>
 				<configuration>
 					<server>github</server>
 					<!-- git commit message -->
-					<message>Maven artifacts for ${project.name} version
-						${project.version}</message>
+					<message>Maven artifacts for ${project.name} version ${project.version}</message>
 					<!-- matches distribution management repository url above -->
 					<outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
 					<!-- remote branch name -->
@@ -110,6 +138,7 @@
 				</executions>
 			</plugin>
 		</plugins>
+		
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
