--- a/bw4t/bw4t-integration-test/pom.xml
+++ b/bw4t/bw4t-integration-test/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>eishub</groupId>
         <artifactId>bw4t</artifactId>
-        <version>3.8.0</version>
+        <version>3.8.1-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
     
@@ -45,12 +45,12 @@
         <dependency>
             <groupId>eishub.bw4t</groupId>
             <artifactId>bw4t-server</artifactId>
-            <version>3.8.0</version>
+            <version>3.8.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>eishub.bw4t</groupId>
             <artifactId>bw4t-client</artifactId>
-            <version>3.8.0</version>
+            <version>3.8.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
