--- a/bw4t/bw4t-scenario-editor/pom.xml
+++ b/bw4t/bw4t-scenario-editor/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>eishub</groupId>
 		<artifactId>bw4t</artifactId>
-		<version>3.8.0</version>
+		<version>3.8.1-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 	
@@ -195,7 +195,7 @@
 		<dependency>
 			<groupId>eishub.bw4t.core</groupId>
 			<artifactId>bw4t-core</artifactId>
-			<version>3.8.0</version>
+			<version>3.8.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
