--- a/bw4t-server/pom.xml
+++ b/bw4t-server/pom.xml
@@ -174,9 +174,9 @@
 			<version>1.5</version>
 		</dependency>
 		<dependency>
-			<groupId>javassist</groupId>
+			<groupId>org.javassist</groupId>
 			<artifactId>javassist</artifactId>
-			<version>3.12.1.GA</version>
+			<version>3.19.0-GA</version>
 		</dependency>
 		<dependency>
 			<groupId>javolution</groupId>
