--- a/bw4t-server/pom.xml
+++ b/bw4t-server/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>eishub</groupId>
 		<artifactId>bw4t</artifactId>
-		<version>3.8.1-SNAPSHOT</version>
+		<version>3.8.1</version>
 	</parent>
 	
 	<groupId>eishub.bw4t</groupId>
@@ -151,7 +151,7 @@
 		<dependency>
 			<groupId>eishub.bw4t.core</groupId>
 			<artifactId>bw4t-core</artifactId>
-			<version>3.8.1-SNAPSHOT</version>
+			<version>3.8.1</version>
 		</dependency>
 		<dependency>
 			<groupId>repast.simphony</groupId>
