--- a/bw4t-server/pom.xml
+++ b/bw4t-server/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>eishub</groupId>
 		<artifactId>bw4t</artifactId>
-		<version>3.8.1</version>
+		<version>3.8.2-SNAPSHOT</version>
 	</parent>
 	
 	<groupId>eishub.bw4t</groupId>
