--- a/bw4t-scenario-editor/pom.xml
+++ b/bw4t-scenario-editor/pom.xml
@@ -2,15 +2,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	
-	<parent>
-		<groupId>eishub</groupId>
-		<artifactId>bw4t</artifactId>
-		<version>3.8.2-SNAPSHOT</version>
-		<relativePath>..</relativePath>
-	</parent>
-	
 	<groupId>eishub.bw4t</groupId>
 	<artifactId>bw4t-scenario-editor</artifactId>
+	<version>3.8.2-SNAPSHOT</version>
 	<name>bw4t-scenario-editor</name>
 	<url>http://www.github.com/eishub/bw4t</url>
 	
@@ -195,12 +189,25 @@
 		<dependency>
 			<groupId>eishub.bw4t.core</groupId>
 			<artifactId>bw4t-core</artifactId>
-			<version>3.8.1</version>
+			<version>3.8.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>2.0.28-beta</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
