--- a/bw4t-server/pom.xml
+++ b/bw4t-server/pom.xml
@@ -2,14 +2,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	
-	<parent>
-		<groupId>eishub</groupId>
-		<artifactId>bw4t</artifactId>
-		<version>3.8.2-SNAPSHOT</version>
-	</parent>
-	
 	<groupId>eishub.bw4t</groupId>
 	<artifactId>bw4t-server</artifactId>
+	<version>3.8.2-SNAPSHOT</version>
 	<url>http://www.github.com/eishub/bw4t</url>
 	
 	<properties>
@@ -33,6 +28,14 @@
 		<developerConnection>scm:git:git@github.com:eishub/bw4t.git</developerConnection>
 		<url>https://github.com:eishub/bw4t</url>
 	</scm>
+	
+	<repositories>
+		<repository>
+			<id>git-bw4t-dependency-repository</id>
+			<name>Git BW4T Dependency Repository</name>
+			<url>https://eishub.github.io/BW4T/repo/bw4t/dep/</url>
+		</repository>
+	</repositories>
 
 	<build>
 		<plugins>
@@ -44,10 +47,21 @@
 					<includeEmptyDirs>true</includeEmptyDirs>
 				</configuration>
 			</plugin>
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.3</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+			
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.4</version>
+				<version>2.6</version>
 				<configuration>
 					<archive>
 						<index>true</index>
@@ -109,7 +123,7 @@
 			<plugin>
 				<groupId>com.github.github</groupId>
 				<artifactId>site-maven-plugin</artifactId>
-				<version>0.10</version>
+				<version>0.11</version>
 				<configuration>
 					<server>github</server>
 					<!-- git commit message -->
@@ -151,7 +165,7 @@
 		<dependency>
 			<groupId>eishub.bw4t.core</groupId>
 			<artifactId>bw4t-core</artifactId>
-			<version>3.8.1</version>
+			<version>3.8.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>repast.simphony</groupId>
@@ -222,6 +236,19 @@
 			<groupId>net.sourceforge.collections</groupId>
 			<artifactId>collections-generic</artifactId>
 			<version>4.01</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>2.0.28-beta</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
