--- a/bw4t-core/pom.xml
+++ b/bw4t-core/pom.xml
@@ -4,7 +4,7 @@
 	
 	<groupId>eishub.bw4t.core</groupId>
 	<artifactId>bw4t-core</artifactId>
-	<version>3.8.4</version>
+	<version>3.8.5-SNAPSHOT</version>
 	<name>bw4t-core</name>
 	<url>http://www.github.com/eishub/bw4t</url>
 	
