--- a/bw4t-integration-test/pom.xml
+++ b/bw4t-integration-test/pom.xml
@@ -1,18 +1,21 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    
-    <groupId>eishub.bw4t</groupId>
-    <artifactId>bw4t-integration-test</artifactId>
-    <version>3.8.5</version>
-    <description>This module integration test the entire bw4t system, to ensure the working state of the client and server.</description>
-    <url>http://www.github.com/eishub/bw4t</url>
-    
-    <properties>
-        <checkstyle.config.location>../checkstyle.xml</checkstyle.config.location>
-    </properties>
-    
-    <organization>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+
+	<groupId>eishub.bw4t</groupId>
+	<artifactId>bw4t-integration-test</artifactId>
+	<version>3.8.6-SNAPSHOT</version>
+	<description>This module integration test the entire bw4t system, to ensure the working state of the client and server.</description>
+	<url>http://www.github.com/eishub/bw4t</url>
+
+	<properties>
+		<checkstyle.config.location>../checkstyle.xml</checkstyle.config.location>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+	</properties>
+
+	<organization>
 		<name>eishub</name>
 		<url>https://github.com/eishub</url>
 	</organization>
@@ -27,7 +30,7 @@
 		<developerConnection>scm:git:git@github.com:eishub/bw4t.git</developerConnection>
 		<url>https://github.com:eishub/bw4t</url>
 	</scm>
-	
+
 	<repositories>
 		<repository>
 			<id>eishub-mvn-repo</id>
@@ -40,22 +43,22 @@
 		</repository>
 	</repositories>
 
-    <dependencies>
-        <dependency>
+	<dependencies>
+		<dependency>
 			<groupId>eishub.bw4t.core</groupId>
 			<artifactId>bw4t-core</artifactId>
-			<version>3.8.5</version>
+			<version>3.8.6-SNAPSHOT</version>
 		</dependency>
-        <dependency>
-            <groupId>eishub.bw4t</groupId>
-            <artifactId>bw4t-server</artifactId>
-            <version>3.8.5</version>
-        </dependency>
-        <dependency>
-            <groupId>eishub.bw4t</groupId>
-            <artifactId>bw4t-client</artifactId>
-            <version>3.8.5</version>
-        </dependency>
+		<dependency>
+			<groupId>eishub.bw4t</groupId>
+			<artifactId>bw4t-server</artifactId>
+			<version>3.8.6-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>eishub.bw4t</groupId>
+			<artifactId>bw4t-client</artifactId>
+			<version>3.8.6-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>repast.simphony</groupId>
 			<artifactId>scenario</artifactId>
@@ -66,8 +69,8 @@
 			<artifactId>bin_and_src</artifactId>
 			<version>2.1</version>
 		</dependency>
-        
-        <dependency>
+
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
@@ -79,87 +82,87 @@
 			<version>2.0.28-beta</version>
 			<scope>test</scope>
 		</dependency>
-    </dependencies>
+	</dependencies>
 
-    <build>
-        <plugins>
-            <!-- *** failsafe plugin: run server and test the integration *** -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.17</version>
-                <configuration>
-                    <workingDirectory>${basedir}/target/</workingDirectory>
-                </configuration>
-            </plugin>
+	<build>
+		<plugins>
+			<!-- *** failsafe plugin: run server and test the integration *** -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.17</version>
+				<configuration>
+					<workingDirectory>${basedir}/target/</workingDirectory>
+				</configuration>
+			</plugin>
 
-            <!-- *** Ant plugin: start and stop the integration server *** -->
-            <plugin>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <version>1.7</version>
-                <executions>
-                    <execution>
-                        <id>start-server</id>
-                        <phase>pre-integration-test</phase>
-                        <configuration>
-                            <target>
-                                <mkdir dir="target/run-server/" />
-                                <java fork="true" spawn="true" dir="target/run-server/"
-                                    classpathref="maven.runtime.classpath" className="nl.tudelft.bw4t.server.environment.Launcher"
-                                    args="-gui true -map Banana -key bw4tServerIntegration" />
-                                <waitfor maxwait="1" maxwaitunit="minute" checkevery="200">
-                                    <socket server="localhost" port="8000" />
-                                </waitfor>
-                                <sleep seconds="5" />
-                            </target>
-                        </configuration>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>stop-server</id>
-                        <phase>post-integration-test</phase>
-                        <configuration>
-                            <target>
-                                <!-- *** run a java client to kill the server *** -->
-                                <java classpathref="maven.runtime.classpath"
-                                    className="nl.tudelft.bw4t.client.environment.RemoteEnvironment"
-                                    args="-kill bw4tServerIntegration" />
-                            </target>
-                        </configuration>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.17</version>
-                <configuration>
-                    <excludes>
-                        <exclude>**/*.java</exclude>
-                    </excludes>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>integration-test</id>
-                        <phase>integration-test</phase>
-                        <goals>
-                            <goal>test</goal>
-                        </goals>
-                        <configuration>
-                            <excludes>
-                                <exclude>none</exclude>
-                            </excludes>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            
-            <plugin>
+			<!-- *** Ant plugin: start and stop the integration server *** -->
+			<plugin>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>1.7</version>
+				<executions>
+					<execution>
+						<id>start-server</id>
+						<phase>pre-integration-test</phase>
+						<configuration>
+							<target>
+								<mkdir dir="target/run-server/" />
+								<java fork="true" spawn="true" dir="target/run-server/"
+									classpathref="maven.runtime.classpath" className="nl.tudelft.bw4t.server.environment.Launcher"
+									args="-gui true -map Banana -key bw4tServerIntegration" />
+								<waitfor maxwait="1" maxwaitunit="minute" checkevery="200">
+									<socket server="localhost" port="8000" />
+								</waitfor>
+								<sleep seconds="5" />
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>stop-server</id>
+						<phase>post-integration-test</phase>
+						<configuration>
+							<target>
+								<!-- *** run a java client to kill the server *** -->
+								<java classpathref="maven.runtime.classpath"
+									className="nl.tudelft.bw4t.client.environment.RemoteEnvironment"
+									args="-kill bw4tServerIntegration" />
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.17</version>
+				<configuration>
+					<excludes>
+						<exclude>**/*.java</exclude>
+					</excludes>
+				</configuration>
+				<executions>
+					<execution>
+						<id>integration-test</id>
+						<phase>integration-test</phase>
+						<goals>
+							<goal>test</goal>
+						</goals>
+						<configuration>
+							<excludes>
+								<exclude>none</exclude>
+							</excludes>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.3</version>
@@ -168,8 +171,8 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
-            
-            <plugin>
+
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-deploy-plugin</artifactId>
 				<version>2.8.2</version>
@@ -177,15 +180,16 @@
 					<altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
 				</configuration>
 			</plugin>
-            
-            <plugin>
+
+			<plugin>
 				<groupId>com.github.github</groupId>
 				<artifactId>site-maven-plugin</artifactId>
 				<version>0.11</version>
 				<configuration>
 					<server>github</server>
 					<!-- git commit message -->
-					<message>Maven artifacts for ${project.name} version ${project.version}</message>
+					<message>Maven artifacts for ${project.name} version
+						${project.version}</message>
 					<!-- matches distribution management repository url above -->
 					<outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
 					<!-- remote branch name -->
@@ -209,68 +213,68 @@
 					</execution>
 				</executions>
 			</plugin>
-        </plugins>
-    </build>
+		</plugins>
+	</build>
 
-    <reporting>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-project-info-reports-plugin</artifactId>
-                <version>2.1.2</version>
-                <reportSets>
-                    <reportSet>
-                        <reports>
-                            <report>project-team</report>
-                        </reports>
-                    </reportSet>
-                </reportSets>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-project-info-reports-plugin</artifactId>
-                <version>2.4</version>
-            </plugin>
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-project-info-reports-plugin</artifactId>
+				<version>2.1.2</version>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<report>project-team</report>
+						</reports>
+					</reportSet>
+				</reportSets>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-project-info-reports-plugin</artifactId>
+				<version>2.4</version>
+			</plugin>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.9.1</version>
-            </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.9.1</version>
+			</plugin>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jxr-plugin</artifactId>
-                <configuration>
-                    <linkJavadoc>true</linkJavadoc>
-                </configuration>
-                <version>2.4</version>
-            </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jxr-plugin</artifactId>
+				<configuration>
+					<linkJavadoc>true</linkJavadoc>
+				</configuration>
+				<version>2.4</version>
+			</plugin>
 
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>findbugs-maven-plugin</artifactId>
-                <version>2.3.2</version>
-            </plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>findbugs-maven-plugin</artifactId>
+				<version>2.3.2</version>
+			</plugin>
 
-            <plugin> <!-- JUnit report -->
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>2.17</version>
-            </plugin>
+			<plugin> <!-- JUnit report -->
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+				<version>2.17</version>
+			</plugin>
 
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-                <version>2.6</version>
-                <configuration>
-                    <formats>
-                        <format>html</format>
-                        <format>xml</format>
-                    </formats>
-                </configuration>
-            </plugin>
-        </plugins>
-    </reporting>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+					<formats>
+						<format>html</format>
+						<format>xml</format>
+					</formats>
+				</configuration>
+			</plugin>
+		</plugins>
+	</reporting>
 
 </project>
