--- a/bw4t-environment-store/pom.xml
+++ b/bw4t-environment-store/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>eishub.bw4t</groupId>
 	<artifactId>bw4t-environment-store</artifactId>
-	<version>3.9.0</version>
+	<version>3.9.1-SNAPSHOT</version>
 	<name>bw4t-environment-store</name>
 	<url>http://www.github.com/eishub/bw4t</url>
 
@@ -43,9 +43,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>eishub.bw4t.core</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>bw4t-core</artifactId>
-			<version>3.9.0</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.miglayout</groupId>
